--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,22 @@ MarkupSafe==2.0.1
 psycopg2==2.9.1
 Werkzeug==2.0.1
 python-dotenv==0.18.0
+
+bcrypt==4.0.1
+certifi==2022.9.24
+charset-normalizer==2.1.1
+click==8.1.3
+Flask==2.2.2
+# idna==3.4
+importlib-metadata==4.12.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.1
+numpy==1.23.3
+overlap==0.1.0
+psycopg2-binary==2.9.5
+requests==2.28.1
+six==1.15.0
+urllib3==1.26.12
+Werkzeug==2.2.2
+zipp==3.8.1
