--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MY_PSQL_DBNAME=
-MY_PSQL_USER=
-MY_PSQL_HOST=
-MY_PSQL_PASSWORD=
+MY_PSQL_DBNAME='ProMan'
+MY_PSQL_USER= 'postgres'
+MY_PSQL_HOST= 'localhost'
+MY_PSQL_PASSWORD='Jula12345'
