--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MY_PSQL_DBNAME='proman'
-MY_PSQL_USER= 'tomek'
+MY_PSQL_DBNAME='ProMan'
+MY_PSQL_USER= 'postgres'
 MY_PSQL_HOST= 'localhost'
-MY_PSQL_PASSWORD='admin1'
+MY_PSQL_PASSWORD='Jula12345'
